# smol-cmake

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json  wer.py  wer.toml
include/: bin_search.hpp
src/: add.hpp  main.cpp
